--- a/src/app/portal/portal.component.html
+++ b/src/app/portal/portal.component.html
@@ -19,7 +19,7 @@
 
           <div class="user">
             <span>
-              <small>Olá</small> {{currentUser?.firstName}}
+              <small>Olá,</small> <strong>{{currentUser?.firstName}}</strong>
             </span>
           </div>
         </div>
@@ -32,12 +32,14 @@
       <div class="row">
 
         <div class="col-md-2">
-          <div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
-            <a class="nav-link" data-toggle="pill" routerLinkActive="active" [routerLink]="['home']" role="tab" aria-controls="home"
-              aria-selected="true">Home</a>
-            <a class="nav-link" data-toggle="pill" routerLinkActive="active" [routerLink]="['relatorio']" role="tab" aria-controls="relatorio"
-              aria-selected="false">Power BI</a>
-          </div>
+          <nav class="menu-lateral">
+            <div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
+              <a class="nav-link" data-toggle="pill" routerLinkActive="active" [routerLink]="['home']" role="tab" aria-controls="home"
+                aria-selected="true">Home</a>
+              <a class="nav-link" data-toggle="pill" routerLinkActive="active" [routerLink]="['relatorio']" role="tab" aria-controls="relatorio"
+                aria-selected="false">Power BI</a>
+            </div>
+          </nav>
         </div>
 
         <div class="col-sm">
